KdirLister: update symlink dir content on file removal

When looking for the item in lstItems, we already know the path of url is contained within the dir examined.

BUG: 469254
(cherry picked from commit dbf5af9393a9dc3026d255dac4fb3535e1557bdb)